v1.1.0
----------------------------------------------------------------------------------------------------
 * IMPORTANT: name change in configuration directives. The Apache team decided that the current
   names would confuse you, the users, and asked for a change. The old names are still working
   in this version, so you can safely upgrade. 
   They will give warnings in the log and will disappear in the immediate future.
   * ManagedDomain is now MDomain
   * <ManagedDomain> is now <MDomainSet>
 
v1.0.7
----------------------------------------------------------------------------------------------------
 * removed old EXPERIMENTAL code for defaulting to Lets Encrypt staging area.
 * acme now follows "up" link headers to retrieve issuer certificate chain. This
   will lead to shorter chains as the "up" links will stop at the cert that browsers
   trust instead of always going to the topmost root. 
   See https://github.com/letsencrypt/boulder/issues/3259
 * Fixed a missing argument in a debug log statement.

v1.0.6
----------------------------------------------------------------------------------------------------
 * fix in configure: checking for the correct arc4random_buf now.

v1.0.5
----------------------------------------------------------------------------------------------------
 * restricting post_config dry run to be more silent and performing
   only necessary work for mod_ssl to be also happy with the configuration.

v1.0.3
----------------------------------------------------------------------------------------------------
 * fixed various bugs in persisting job properties, so that status is persisted across
   child process changes and staging is reset on reloads.
 * changed MDCertificateAgreement url checks. As long as the CA reports that the account
   has an agreement, no further checking is done. Existing accounts need no changes when
   a new agreement comes out. This is as Let's Encrypt rolls.

v1.0.2