@@ -260,6 +260,8 @@ class TestDrive :
     def test_500_109(self):
         # test case: redirect on SSL-only domain
         # setup: prepare config
+        if not TestEnv.httpd_is_at_least("2.5.0"):
+            return
         domain = "test500-109-" + TestDrive.dns_uniq
         name = "www." + domain
         conf = HttpdConf( TestDrive.TMP_CONF )
@@ -318,6 +320,8 @@ class TestDrive :
     def test_500_110(self):
         # test case: SSL-only domain, override headers generated by mod_md 
         # setup: prepare config
+        if not TestEnv.httpd_is_at_least("2.5.0"):
+            return
         domain = "test500-110-" + TestDrive.dns_uniq
         name = "www." + domain
         conf = HttpdConf( TestDrive.TMP_CONF )
@@ -359,6 +363,8 @@ class TestDrive :
     def test_500_111(self):
         # test case: vhost with parallel HTTP/HTTPS, check mod_alias redirects
         # setup: prepare config
+        if not TestEnv.httpd_is_at_least("2.5.0"):
+            return
         domain = "test500-111-" + TestDrive.dns_uniq
         name = "www." + domain
         conf = HttpdConf( TestDrive.TMP_CONF )
